<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">veRTC Room</string>

    <string name="meeting_limited_service">本产品仅用于功能体验，单次会议时长不超过30分钟</string>
    <string name="class_limited_service">本产品仅用于功能体验，单次课堂时长不超过30分钟</string>
    <string name="create_input_room_id_hint">请输入房间ID</string>
    <string name="create_input_room_id_length_warn">房间ID长度不能超过18位</string>
    <string name="create_input_room_id_content_warn">请输入数字、英文字母或符号@_-</string>
    <string name="create_input_user_name_hint">请输入昵称</string>
    <string name="create_input_user_name_content_warn">请输入中文、数字、英文字母或符号@_-</string>
    <string name="create_input_user_name_length_warn">昵称长度不能超过18位</string>
    <string name="create_join_meeting">进入房间</string>
    <string name="error_room_full">房间人数已满</string>
    <string name="version_desc">Demo版本 v%1$s / SDK版本 v%2$s</string>
    <string name="error_user_counts_limit">房间成员数量达到上限</string>
    <string name="request_permission_tips">为了更好的体验，请授予VERTC麦克风和相机权限</string>
    <string name="request_cam_permission_tips">未获得相机权限，是否去设置中授予VERTC该权限</string>
    <string name="request_mic_permission_tips">未获得麦克风权限，是否去设置中授予VERTC该权限</string>
    <string name="request_permission_go_setting">去设置</string>

    <string name="connecting">正在连接</string>
    <string name="request_rtm_fail">获取RTM配置参数出错, 重新连接中</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="user_agreement">用户协议</string>
    <string name="disclaimer">免责声明</string>
    <string name="permission_list">权限申请清单</string>
    <string name="license_list">资质证照</string>
    <string name="business_license">营业执照</string>
    <string name="telecom_license">增值电信业务经营许可证</string>
    <string name="net_culture_license">网络文化经营许可证</string>
    <string name="demo_version_label">Demo版本</string>
    <string name="sdk_version_label">SDK版本</string>
    <string name="user_name_label">用户名</string>
    <string name="tab_scenes">主页</string>
    <string name="tab_profile">我的</string>
    <string name="delete_account">注销帐号</string>
    <string name="exit_login">退出登录</string>
    <string name="delete_account_tips">注销后，当前帐号的相关数据将会被删除且无法找回。</string>

    <string name="settings_title">会议设置</string>
    <string name="settings_video_resolution">分辨率</string>
    <string name="settings_video_frame_rate">帧率</string>
    <string name="settings_frame_rate">%dfps</string>
    <string name="settings_video_bit_rate">码率</string>
    <string name="settings_bit_rate">%dkbps</string>
    <string name="settings_video_log">实时视频参数</string>
    <string name="settings_screen_resolution">屏幕共享分辨率</string>
    <string name="settings_screen_frame_rate">屏幕共享帧率</string>
    <string name="settings_screen_bit_rate">屏幕共享码率</string>
    <string name="settings_view_history_meetings">查看历史会议</string>
    <string name="settings_view_my_history_meetings">我的云录制</string>

    <string name="on_ask_open_mic">%s请求打开你的麦克风</string>
    <string name="on_ask_open_cam">%s请求打开你的摄像头</string>

    <string name="need_permit_to_mic">无法自行打开麦克风，请向%s申请发言</string>
    <string name="request_turn_on_mic">%s正在申请发言</string>
    <string name="request_turn_on_mic_multi">%d位用户正在申请发言</string>
    <string name="need_permit_to_share">暂无共享权限，请向%s申请</string>
    <string name="request_turn_on_share">%s正在申请共享权限</string>
    <string name="request_turn_on_share_multi">%d位用户正在申请共享</string>
    <string name="request_record">%s正在申请录制</string>
    <string name="already_request_record">已向%s发起录制请求</string>

    <string name="users_title">成员（%d）</string>
    <string name="login_duplicate_login">相同ID的用户登录，您已被强制下线</string>

    <string name="audio_route_speaker">扬声器</string>
    <string name="audio_route_earpiece">听筒</string>
    <string name="stats_info">统计信息</string>
    <string name="action_record">录制</string>
    <string name="action_stop_record">停止录制</string>
    <string name="action_setting">设置</string>
    <string name="device_mic">麦克风</string>
    <string name="device_camera">摄像头</string>
    <string name="action_share">共享</string>
    <string name="action_share_screen">共享屏幕</string>
    <string name="action_share_wb">共享白板</string>
    <string name="action_participant">成员</string>
    <string name="action_more">更多</string>
    <string name="info_room_id">房间ID：</string>
    <string name="info_remind_time">剩余时间：%s</string>
    <string name="room_id_copied">房间号已复制</string>
    <string name="mute_all_audio">全部静音</string>
    <string name="meeting_close_option_finish">结束会议</string>
    <string name="close_option_broadcaster_leave">暂时离开</string>
    <string name="meeting_close_option_audience_leave">离开会议</string>
    <string name="close_option_cancel">取消</string>
    <string name="recording">录制中</string>
    <string name="student_stop_recording_hint">老师才能停止录制</string>
    <string name="sharing_screen_local_tips">你正在共享屏幕</string>
    <string name="sharing_audio">共享设备音频</string>
    <string name="sharing_stop">停止共享</string>
    <string name="replaced_by_sharing_screen">%s在共享屏幕</string>
    <string name="replaced_by_sharing_white_board">%s在共享白板</string>
    <string name="failed_mute_mic_all">全体静音失败，请重试</string>
    <string name="failed_mute_mic">静音失败，请重试</string>
    <string name="mute_all_audio_tips">将全体以及新加入的%s静音</string>
    <string name="mic_mute">%s已将你设置静音</string>
    <string name="mic_permission_granted">%s自己打开麦克风</string>
    <string name="mic_unumte_request_success">开麦申请已发送</string>
    <string name="mic_unumte_request_failed">开麦申请发送失败</string>
    <string name="cam_mute">%s已关闭了你的摄像头</string>
    <string name="cam_unumte_request_success">开启摄像头申请已发送</string>
    <string name="cam_unumte_request_failed">开启摄像头申请发送失败</string>
    <string name="grant_share_permission_tips">是否授予共享权限</string>
    <string name="share_permission_granted">%s已授予你共享权限</string>
    <string name="revert_share_permission_tips">是否取消共享权限</string>
    <string name="share_permission_reverted">共享权限已被收回</string>
    <string name="who_is_speaking">正在讲话：%s</string>
    <string name="share_screen">分享屏幕</string>
    <string name="share_whiteboard">分享白板</string>
    <string name="black_whiteboard">白板</string>
    <string name="stop_whiteboard">退出白板</string>
    <string name="wb_add_page">添加画板</string>
    <string name="wb_page_info">%1$d/%2$d</string>
    <string name="wb_pen_size">画笔大小</string>
    <string name="wb_pen_color">画笔颜色</string>
    <string name="wb_text_size">文字大小</string>
    <string name="wb_text_color">文字颜色</string>
    <string name="wb_shape">形状类型</string>
    <string name="wb_shape_size">线条大小</string>
    <string name="wb_shape_color">线条颜色</string>
    <string name="wb_size_small">小</string>
    <string name="wb_size_mid">中</string>
    <string name="wb_size_large">大</string>
    <string name="record_confirm_title">确定要开始录制吗？</string>
    <string name="record_start">开始录制</string>
    <string name="record_confirm_content">录制功能仅做体验，本产品仅用于功能体验，单次录制时长不超过15分钟，录制文件保留时间1周</string>
    <string name="record_already_started">录制已开始</string>
    <string name="record_already_stopped">录制已停止</string>
    <string name="record_already_stopped_time_limit">15分钟录制时长已到，已为你停止录制</string>
    <string name="tips_dialog_title">提示</string>
    <string name="tips_time_limit">体验时间已结束</string>
    <string name="me_tag">（我）</string>
    <string name="open_mic_as_host_demand">%s已将你的静音取消</string>
    <string name="start_record_rejected">录制被拒绝</string>
    <string name="share_rejected">%s已拒绝</string>
    <string name="screen_capture_not_supported">当前系统版本过低，无法支持屏幕共享</string>
    <string name="screen_capture_no_media_projection">此手机无法开启屏幕分享</string>
    <string name="screen_capture_hint">正在录制/投射您的屏幕</string>

    <string name="scene_meeting">视频会议</string>
    <string name="create_choose_role_host">我是主持人</string>
    <string name="create_choose_role_attendee">我是参会者</string>
    <string name="error_host_exist">该房间已有其他主持人</string>

    <string name="scene_class_small">小班课课堂</string>
    <string name="create_choose_role_teacher">我是老师</string>
    <string name="create_choose_role_student">我是学生</string>
    <string name="error_teacher_exist">该房间已有其他老师</string>

    <string name="scene_class_large">大班课课堂</string>

    <string name="role_host_desc_meeting">主持人</string>
    <string name="role_participant_desc_meeting">参会者</string>
    <string name="role_host_desc_class">老师</string>
    <string name="role_participant_desc_class">学生</string>
    <string name="waiting_teacher">等待老师进入房间</string>
    <string name="edu_close_option_finish">关闭房间</string>
    <string name="edu_close_option_audience_leave">离开房间</string>
    <string name="class_small">小班课</string>
    <string name="class_large">大班课</string>
    <string name="already_apply_link_mic">已经申请连麦</string>
    <string name="revert_apply_link_mic">是否取消连麦申请</string>
    <string name="network_lost_tips">网络链接已断开，请检查设置</string>

</resources>