<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/popup_background"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/leave_meeting_host_finish"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_leave_alert"
        android:gravity="center"
        android:text="@string/meeting_close_option_finish"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/leave_meeting_host"
        style="@style/PopConfirmButton"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/close_option_broadcaster_leave"
        android:textColor="@color/title_bar_title"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/leave_meeting_participant"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:background="@drawable/bg_leave_alert"
        android:gravity="center"
        android:text="@string/meeting_close_option_audience_leave"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        tools:visibility="visible" />
</LinearLayout>