<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/local_share_screen_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/sharing_screen_local_tips"
        android:textColor="@color/title_bar_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/local_share_audio_tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/local_share_audio_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:text="@string/sharing_audio"
        android:textColor="@color/title_bar_title"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/local_audio_share_switch"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local_share_screen_tips"
        app:layout_constraintVertical_bias="0.5" />

    <Switch
        android:id="@+id/local_audio_share_switch"
        style="@style/SwitchLg"
        android:layout_marginLeft="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/local_share_audio_tips"
        app:layout_constraintTop_toTopOf="@+id/local_share_audio_tips"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/local_stop_share"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/bg_highlight_button"
        android:gravity="center"
        android:text="@string/sharing_stop"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/local_share_screen_tips"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>

